# VideoDemo

./: CMakeLists.txt  Makefile  README.md  ffmpeg_util.cpp  ffmpeg_util.h  main.cpp
mains/: README.md  easy_video.cpp
unit_test/: README.md  any_test.cc
